# mural-client

./: Cargo.toml  README.md
.github/: matrix.json
.github/workflows/: musl-build.yml  release.yml
src/: cli.rs  config.rs  env.rs  error.rs  lib.rs  main.rs
