[package]
name = "mural-client"
version = "0.1.0"
edition = "2024"
authors = ["Silvan Schmidt <mail@silvanschmidt.ch>"]


[dependencies]
dotenvy = "0.15.7"
jiff = "0.2.4"
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
xdg = "2.5.2"
