[package]
name = "mural-client"
version = "1.1.2"
edition = "2024"
authors = ["Silvan Schmidt <mail@silvanschmidt.ch>"]
description = "Client software for the mural wallpaper service"
license = "MIT"
license-file = "LICENSE"
repository = "https://github.com/mural-sync/mural-client"


[dependencies]
clap = { version = "4.5.32", features = ["cargo"] }
directories = "6.0.0"
dotenvy = "0.15.7"
jiff = "0.2.4"
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
